samples/_failures_safe/1761635081_7d428b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73f382ba.c:158:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  158 | void parser_advance
      | ^~~~
